--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
 datasources.default.url=jdbc:mysql://192.168.129.0:3307/sensors
 datasources.default.username=admin
 datasources.default.password=${DB_PASSWORD:}
+
+micronaut.server.endpoints.websocket.mapping=/sockets/**
+micronaut.server.endpoints.websocket.allowed-origins=*
